--- a/credit_card_fraud_revised.ipynb
+++ b/credit_card_fraud_revised.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -60,25 +60,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0    28432\n",
-      "1       49\n",
-      "Name: Class, dtype: int64\n",
-      "\n",
-      "Percent Fraud:\n",
-      "\n",
-      "Sample df: 0.17234102419808667%\n",
-      "\n",
-      "Full df: 0.17304750013189596%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#sample 10% of the full dataset\n",
     "#keep the fraud ratio close using random state\n",
@@ -103,24 +87,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3 kbest features:\n",
-      "['V12', 'V14', 'V17']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.feature_selection import SelectKBest, f_classif\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
-    "k=3\n",
+    "k=5\n",
     "kbest = SelectKBest(f_classif, k=k) #instantiate\n",
     "kbest.fit(X_sample, y_sample)\n",
     "mask = kbest.get_support()\n",
@@ -136,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,8 +122,8 @@
     "                                                      y_sample,\n",
     "                                                      test_size=.2,\n",
     "                                                      random_state=112)\n",
-    "#print(y_train.value_counts())\n",
-    "#print(y_test.value_counts())"
+    "print(y_train.value_counts())\n",
+    "print(y_test.value_counts())"
    ]
   },
   {
@@ -166,17 +141,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "45490 45490\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Oversample train sets to retain data\n",
     "from imblearn.over_sampling import RandomOverSampler\n",
@@ -195,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,25 +184,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Best parameters:\n",
-      " {'learning_rate': 1, 'loss': 'exponential', 'max_depth': 2, 'n_estimators': 250}\n",
-      "\n",
-      "Best score:\n",
-      " 0.9998021543196307\n",
-      "\n",
-      "runtime:\n",
-      " 203.814886 seconds\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn import ensemble\n",
     "from sklearn.model_selection import GridSearchCV\n",
@@ -260,42 +211,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "¿ GridSearchCV often finds different parameters each time I run it, how should I handle this ?"
+    "__Question:__ GridSearchCV often finds different parameters each time I run it, how should I handle this?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "score array:\n",
-      " [0.99978022 1.         0.99978022 0.99978022 0.99978022 1.\n",
-      " 0.99956025 0.99956025 0.99978012 0.99978012]\n",
-      "\n",
-      "score array mean:\n",
-      " 0.9997801617907159\n",
-      "\n",
-      "AUROC score:\n",
-      " 1.0\n",
-      "\n",
-      "runtime:\n",
-      " 18.40108299999997 seconds\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#train with best params\n",
     "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.metrics import roc_auc_score\n",
     "\n",
     "cv = 10\n",
-    "clf2 = ensemble.GradientBoostingClassifier(loss='exponential',\n",
-    "                                           learning_rate=1,\n",
-    "                                           n_estimators=250,\n",
+    "clf2 = ensemble.GradientBoostingClassifier(loss='deviance',\n",
+    "                                           learning_rate=0.1,\n",
+    "                                           n_estimators=500,\n",
     "                                           max_depth=2)\n",
     "\n",
     "start_time = time.clock()\n",
@@ -314,28 +246,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "score array:\n",
-      " [0.99824561 1.         0.99649123 0.99824561 0.99824561 1.\n",
-      " 1.         1.         0.99824253 0.99824253]\n",
-      "\n",
-      "score array mean:\n",
-      " 0.9987713131686864\n",
-      "\n",
-      "AUROC score:\n",
-      " 0.9516441005802708\n",
-      "\n",
-      "runtime:\n",
-      " 1.2873839999999745 seconds\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#run on test set\n",
     "start_time = time.clock()\n",
@@ -353,34 +266,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "__Question:__ AUROC Score from .999 to .897, overfitting?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Apply subsample parameter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Best parameters:\n",
-      " {'learning_rate': 1, 'loss': 'exponential', 'max_depth': 2, 'n_estimators': 250, 'subsample': 0.2}\n",
-      "\n",
-      "Best score:\n",
-      " 0.9997362057595076\n",
-      "\n",
-      "runtime:\n",
-      " 46.85390200000006 seconds\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "params = [{'loss':['exponential'],\n",
-    "           'learning_rate':[1],\n",
-    "           'n_estimators':[250],\n",
+    "params = [{'loss':['deviance'],\n",
+    "           'learning_rate':[0.1],\n",
+    "           'n_estimators':[500],\n",
     "           'max_depth':[2],\n",
     "           'subsample':[0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9]}]\n",
     "\n",
@@ -396,34 +300,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "score array:\n",
-      " [0.99978022 0.99978022 0.99978022 1.         1.         1.\n",
-      " 0.99956025 0.99978012 0.99956025 0.99978012]\n",
-      "\n",
-      "score array mean:\n",
-      " 0.999802139812694\n",
-      "\n",
-      "AUROC score:\n",
-      " 1.0\n",
-      "\n",
-      "runtime:\n",
-      " 18.876193000000058 seconds\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "clf4 = ensemble.GradientBoostingClassifier(loss='exponential',\n",
-    "                                           learning_rate=1,\n",
-    "                                           n_estimators=250,\n",
+    "clf4 = ensemble.GradientBoostingClassifier(loss='deviance',\n",
+    "                                           learning_rate=0.1,\n",
+    "                                           n_estimators=500,\n",
     "                                           max_depth=2,\n",
-    "                                           subsample=0.2)\n",
+    "                                           subsample=0.8)\n",
     "start_time = time.clock()\n",
     "clf4.fit(X_train, y_train)\n",
     "scores_clf4 = cross_val_score(clf4, X_train, y_train, cv=cv)\n",
@@ -440,28 +325,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "score array:\n",
-      " [0.99824561 1.         0.99473684 0.99824561 1.         1.\n",
-      " 0.99824561 0.99824253 0.99824253 0.99824253]\n",
-      "\n",
-      "score array mean:\n",
-      " 0.9984201276477662\n",
-      "\n",
-      "AUROC score:\n",
-      " 0.9262528573940566\n",
-      "\n",
-      "runtime:\n",
-      " 2.3189390000000003 seconds\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#run on test set\n",
     "start_time = time.clock()\n",
@@ -479,30 +345,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "AUROC scores similar to model without subsample parameter"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Logistic Regression"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Best parameters:\n",
-      " {'C': 0.01, 'fit_intercept': 'True', 'penalty': 'l2'}\n",
-      "\n",
-      "Best score:\n",
-      " 0.8474609804352605\n",
-      "\n",
-      "runtime:\n",
-      " 1.3314260000000786 seconds\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
@@ -522,32 +379,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "score array:\n",
-      " [0.84373626 0.84131868 0.85010989 0.84879121 0.85494505 0.85070361\n",
-      " 0.85004398 0.84278804 0.84256816 0.84564644]\n",
-      "\n",
-      "score array mean:\n",
-      " 0.8470651318777968\n",
-      "\n",
-      "AUROC score:\n",
-      " 0.9153448193460321\n",
-      "\n",
-      "runtime:\n",
-      " 0.439918999999918 seconds\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#train\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "lr2 = LogisticRegression(C=.01, penalty='l2', fit_intercept=True)\n",
+    "lr2 = LogisticRegression(C=.01, penalty='l1', fit_intercept=True)\n",
     "\n",
     "start_time = time.clock()\n",
     "lr2.fit(X_train, y_train)\n",
@@ -563,39 +401,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "score array:\n",
-      " [0.99824561 0.99824561 0.99824561 0.99824561 1.         1.\n",
-      " 1.         0.99824253 1.         1.        ]\n",
-      "\n",
-      "score array mean:\n",
-      " 0.9991224986896062\n",
-      "\n",
-      "AUROC score:\n",
-      " 0.9920344645683137\n",
-      "\n",
-      "runtime:\n",
-      " 0.06246600000008584 seconds\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#test\n",
     "start_time = time.clock()\n",
     "scores_lr2_test = cross_val_score(lr2, X_test, y_test, cv=cv)\n",
-    "prob_y_test = lr2.predict_proba(X_test)\n",
-    "prob_y_test = [p[1] for p in prob_y_test]\n",
+    "prob_y = lr2.predict_proba(X_test)\n",
+    "prob_y = [p[1] for p in prob_y]\n",
     "\n",
     "print('score array:\\n', scores_lr2_test)\n",
     "print('\\nscore array mean:\\n', np.mean(scores_lr2_test))\n",
-    "print('\\nAUROC score:\\n', roc_auc_score(y_test, prob_y_test))\n",
+    "print('\\nAUROC score:\\n', roc_auc_score(y_test, prob_y))\n",
     "print('\\nruntime:\\n',time.clock() - start_time, 'seconds')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Question:__ model performs much better on test set than train set?"
    ]
   },
   {
@@ -607,25 +433,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Best parameters:\n",
-      " {'alpha': 0.01, 'fit_intercept': 'True'}\n",
-      "\n",
-      "Best score:\n",
-      " 0.8585183556825676\n",
-      "\n",
-      "runtime:\n",
-      " 0.19184200000006513 seconds\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.linear_model import RidgeClassifier\n",
     "\n",
@@ -644,31 +454,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "score array:\n",
-      " [0.85538462 0.85406593 0.86197802 0.85692308 0.86571429 0.86323659\n",
-      " 0.86609499 0.8526825  0.84938434 0.85861917]\n",
-      "\n",
-      "score array mean:\n",
-      " 0.8584083524215449\n",
-      "\n",
-      "runtime:\n",
-      " 0.29351500000007036 seconds\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#train\n",
-    "rclf2 = RidgeClassifier(alpha=.01, fit_intercept=True)\n",
+    "rclf2 = RidgeClassifier(alpha=10, fit_intercept=True)\n",
     "rclf2.fit(X_train,y_train)\n",
     "\n",
     "scores_rclf2 = cross_val_score(rclf2, X_train, y_train, cv=cv)\n",
+    "#Ridge has no AUROC\n",
     "#prob_y = rclf.predict_proba(X_ktrain)\n",
     "#prob_y = [p[1] for p in prob_y]\n",
     "\n",
@@ -680,25 +475,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "score array:\n",
-      " [0.99824561 0.99824561 0.99824561 0.99824561 0.99824561 1.\n",
-      " 0.99824561 0.99824253 0.99824253 0.99824253]\n",
-      "\n",
-      "score array mean:\n",
-      " 0.9984201276477662\n",
-      "\n",
-      "runtime:\n",
-      " 0.03832899999997608 seconds\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#test\n",
     "start_time = time.clock()\n",
@@ -707,6 +486,151 @@
     "print('score array:\\n', scores_rclf2_test)\n",
     "print('\\nscore array mean:\\n', np.mean(scores_rclf2_test))\n",
     "#print('\\nAUROC score:\\n', roc_auc_score(y_test, prob_y))\n",
+    "print('\\nruntime:\\n',time.clock() - start_time, 'seconds')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This model behaves similar to logistic regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Additional: Try undersampling with a Support Vector Classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#X_train2, X_test2, y_train2, y_test2 = train_test_split(X_kbest,\n",
+    "#                                                        y_sample,\n",
+    "#                                                       test_size=.2,\n",
+    "#                                                        random_state=112)\n",
+    "\n",
+    "#print(y_train2.value_counts())\n",
+    "#print(y_test2.value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "284807 284807\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_rus = df_raw['Class'] #target\n",
+    "X_rus = df_raw.loc[:, ~df_raw.columns.isin(['Class'])] #data\n",
+    "\n",
+    "print(len(X_rus), len(y_rus))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "984 984\n"
+     ]
+    }
+   ],
+   "source": [
+    "from imblearn.under_sampling import RandomUnderSampler\n",
+    "\n",
+    "rus = RandomUnderSampler()\n",
+    "X_rus, y_rus = rus.fit_sample(X_rus, y_rus)\n",
+    "print(len(X_rus), len(y_rus))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Best parameters:\n",
+      " {'C': 0.1, 'kernel': 'linear'}\n",
+      "\n",
+      "Best score:\n",
+      " 0.8058943089430894\n",
+      "\n",
+      "runtime:\n",
+      " 581.6680120000001 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "#parameter search\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.svm import SVC\n",
+    "\n",
+    "params_svc = [{'C':[0.01, 0.1, 1, 10],\n",
+    "               'kernel':['rbf','linear']}]\n",
+    "\n",
+    "svc = SVC()\n",
+    "grid_svc = GridSearchCV(estimator=svc, param_grid=params_svc)\n",
+    "\n",
+    "start_time = time.clock()\n",
+    "grid_svc.fit(X_rus, y_rus)\n",
+    "print('\\nBest parameters:\\n', grid_svc.best_params_)\n",
+    "print('\\nBest score:\\n', grid_svc.best_score_)\n",
+    "print('\\nruntime:\\n',time.clock() - start_time, 'seconds')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "score array:\n",
+      " [0.93292683 0.88719512 0.59756098]\n",
+      "\n",
+      "score array mean:\n",
+      " 0.8058943089430896\n",
+      "\n",
+      "runtime:\n",
+      " 198.33356200000003 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "svc2 = SVC(C=0.1, kernel='linear')\n",
+    "\n",
+    "start_time = time.clock()\n",
+    "svc2.fit(X_rus, y_rus)\n",
+    "scores_svc2 = cross_val_score(svc2, X_rus, y_rus, cv=3)\n",
+    "\n",
+    "print('score array:\\n', scores_svc2)\n",
+    "print('\\nscore array mean:\\n', np.mean(scores_svc2))\n",
     "print('\\nruntime:\\n',time.clock() - start_time, 'seconds')"
    ]
   },
