--- a/credit_card_fraud_revised.ipynb
+++ b/credit_card_fraud_revised.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -60,9 +60,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    28432\n",
+      "1       49\n",
+      "Name: Class, dtype: int64\n",
+      "\n",
+      "Percent Fraud:\n",
+      "\n",
+      "Sample df: 0.17234102419808667%\n",
+      "\n",
+      "Full df: 0.17304750013189596%\n"
+     ]
+    }
+   ],
    "source": [
     "#sample 10% of the full dataset\n",
     "#keep the fraud ratio close using random state\n",
@@ -87,9 +103,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 kbest features:\n",
+      "['V10', 'V12', 'V14', 'V16', 'V17']\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.feature_selection import SelectKBest, f_classif\n",
     "import warnings\n",
@@ -111,9 +136,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    22745\n",
+      "1       39\n",
+      "Name: Class, dtype: int64\n",
+      "0    5687\n",
+      "1      10\n",
+      "Name: Class, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
@@ -141,9 +179,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "45490 45490\n"
+     ]
+    }
+   ],
    "source": [
     "#Oversample train sets to retain data\n",
     "from imblearn.over_sampling import RandomOverSampler\n",
@@ -162,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,9 +230,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Best parameters:\n",
+      " {'learning_rate': 0.1, 'loss': 'deviance', 'max_depth': 2, 'n_estimators': 500}\n",
+      "\n",
+      "Best score:\n",
+      " 0.9997362057595076\n",
+      "\n",
+      "runtime:\n",
+      " 275.153378 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn import ensemble\n",
     "from sklearn.model_selection import GridSearchCV\n",
@@ -216,9 +278,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "score array:\n",
+      " [0.99978022 0.99956044 0.99978022 0.99978022 1.         0.99956025\n",
+      " 0.99956025 0.99978012 0.99978012 0.99956025]\n",
+      "\n",
+      "score array mean:\n",
+      " 0.9997142083949472\n",
+      "\n",
+      "AUROC score:\n",
+      " 0.999931185792031\n",
+      "\n",
+      "runtime:\n",
+      " 65.88323100000002 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "#train with best params\n",
     "from sklearn.model_selection import cross_val_score\n",
@@ -246,9 +327,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "score array:\n",
+      " [0.99824561 0.99824561 0.99824561 0.99824561 0.99824561 1.\n",
+      " 1.         0.99824253 0.99648506 0.99824253]\n",
+      "\n",
+      "score array mean:\n",
+      " 0.9984198193198287\n",
+      "\n",
+      "AUROC score:\n",
+      " 0.897705292772991\n",
+      "\n",
+      "runtime:\n",
+      " 4.9366829999999595 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "#run on test set\n",
     "start_time = time.clock()\n",
@@ -266,7 +366,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__Question:__ AUROC Score from .999 to .897, overfitting?"
+    "__Question:__ AUROC Score from .999 to .897, overfitting? Array scores look fishy as well"
    ]
   },
   {
@@ -278,9 +378,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Best parameters:\n",
+      " {'learning_rate': 0.1, 'loss': 'deviance', 'max_depth': 2, 'n_estimators': 500, 'subsample': 0.8}\n",
+      "\n",
+      "Best score:\n",
+      " 0.9997142229061332\n",
+      "\n",
+      "runtime:\n",
+      " 134.902422 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "params = [{'loss':['deviance'],\n",
     "           'learning_rate':[0.1],\n",
@@ -300,9 +416,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "score array:\n",
+      " [1.         0.99956044 0.99978022 0.99978022 1.         0.99956025\n",
+      " 0.99978012 0.99978012 0.99978012 0.99956025]\n",
+      "\n",
+      "score array mean:\n",
+      " 0.9997581741038205\n",
+      "\n",
+      "AUROC score:\n",
+      " 0.999931185792031\n",
+      "\n",
+      "runtime:\n",
+      " 76.20387799999997 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "clf4 = ensemble.GradientBoostingClassifier(loss='deviance',\n",
     "                                           learning_rate=0.1,\n",
@@ -325,9 +460,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "score array:\n",
+      " [0.99824561 0.99824561 1.         1.         0.99649123 1.\n",
+      " 1.         0.99824253 0.99824253 0.99824253]\n",
+      "\n",
+      "score array mean:\n",
+      " 0.9987710048407488\n",
+      "\n",
+      "AUROC score:\n",
+      " 0.8970195181994023\n",
+      "\n",
+      "runtime:\n",
+      " 7.175768999999946 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "#run on test set\n",
     "start_time = time.clock()\n",
@@ -357,9 +511,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Best parameters:\n",
+      " {'C': 0.01, 'fit_intercept': 'True', 'penalty': 'l1'}\n",
+      "\n",
+      "Best score:\n",
+      " 0.840976038689822\n",
+      "\n",
+      "runtime:\n",
+      " 1.7522259999999505 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
@@ -379,9 +549,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "score array:\n",
+      " [0.84       0.83538462 0.8432967  0.84571429 0.84153846 0.84498681\n",
+      " 0.83333333 0.83948989 0.84212841 0.84058927]\n",
+      "\n",
+      "score array mean:\n",
+      " 0.8406461770419554\n",
+      "\n",
+      "AUROC score:\n",
+      " 0.920612701604729\n",
+      "\n",
+      "runtime:\n",
+      " 0.46249199999999746 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "#train\n",
     "from sklearn.linear_model import LogisticRegression\n",
@@ -401,9 +590,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "score array:\n",
+      " [0.99824561 0.99824561 0.99824561 0.99824561 0.99824561 0.99824561\n",
+      " 0.99824561 0.99824253 0.99824253 0.99824253]\n",
+      "\n",
+      "score array mean:\n",
+      " 0.9982446890512751\n",
+      "\n",
+      "AUROC score:\n",
+      " 0.9886759275540706\n",
+      "\n",
+      "runtime:\n",
+      " 0.06200000000001182 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "#test\n",
     "start_time = time.clock()\n",
@@ -433,9 +641,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Best parameters:\n",
+      " {'alpha': 0.01, 'fit_intercept': 'True'}\n",
+      "\n",
+      "Best score:\n",
+      " 0.8551549791162893\n",
+      "\n",
+      "runtime:\n",
+      " 0.29482199999995373 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.linear_model import RidgeClassifier\n",
     "\n",
@@ -454,9 +678,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "score array:\n",
+      " [0.84989011 0.85538462 0.86       0.85626374 0.85516484 0.8564204\n",
+      " 0.8526825  0.8564204  0.85444151 0.85444151]\n",
+      "\n",
+      "score array mean:\n",
+      " 0.8551109629157123\n",
+      "\n",
+      "runtime:\n",
+      " 0.4044930000000022 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "#train\n",
     "rclf2 = RidgeClassifier(alpha=10, fit_intercept=True)\n",
@@ -475,9 +715,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "score array:\n",
+      " [0.99824561 0.99824561 0.99824561 0.99824561 0.99824561 1.\n",
+      " 1.         0.99824253 1.         1.        ]\n",
+      "\n",
+      "score array mean:\n",
+      " 0.998947060093115\n",
+      "\n",
+      "runtime:\n",
+      " 0.03697599999998147 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "#test\n",
     "start_time = time.clock()\n",
@@ -505,22 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#X_train2, X_test2, y_train2, y_test2 = train_test_split(X_kbest,\n",
-    "#                                                        y_sample,\n",
-    "#                                                       test_size=.2,\n",
-    "#                                                        random_state=112)\n",
-    "\n",
-    "#print(y_train2.value_counts())\n",
-    "#print(y_test2.value_counts())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {
     "scrolled": false
    },
@@ -563,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -572,13 +813,13 @@
      "text": [
       "\n",
       "Best parameters:\n",
-      " {'C': 0.1, 'kernel': 'linear'}\n",
+      " {'C': 1, 'kernel': 'linear'}\n",
       "\n",
       "Best score:\n",
-      " 0.8058943089430894\n",
+      " 0.8099593495934959\n",
       "\n",
       "runtime:\n",
-      " 581.6680120000001 seconds\n"
+      " 586.4183800000001 seconds\n"
      ]
     }
    ],
@@ -602,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -610,24 +851,24 @@
      "output_type": "stream",
      "text": [
       "score array:\n",
-      " [0.93292683 0.88719512 0.59756098]\n",
+      " [0.94949495 0.92929293 0.8622449  0.92857143 0.73979592]\n",
       "\n",
       "score array mean:\n",
-      " 0.8058943089430896\n",
+      " 0.8818800247371676\n",
       "\n",
       "runtime:\n",
-      " 198.33356200000003 seconds\n"
+      " 367.17626599999994 seconds\n"
      ]
     }
    ],
    "source": [
     "from sklearn.model_selection import cross_val_score\n",
     "\n",
-    "svc2 = SVC(C=0.1, kernel='linear')\n",
+    "svc2 = SVC(C=1, kernel='linear')\n",
     "\n",
     "start_time = time.clock()\n",
     "svc2.fit(X_rus, y_rus)\n",
-    "scores_svc2 = cross_val_score(svc2, X_rus, y_rus, cv=3)\n",
+    "scores_svc2 = cross_val_score(svc2, X_rus, y_rus, cv=5)\n",
     "\n",
     "print('score array:\\n', scores_svc2)\n",
     "print('\\nscore array mean:\\n', np.mean(scores_svc2))\n",
