--- a/03_06_01_credit_card_fraud.ipynb
+++ b/03_06_01_credit_card_fraud.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Current version is credit_card_fraud_revised.ipynb, disregard this"
+    "# Current version is [credit_card_fraud_revised.ipynb](https://github.com/brianmcguckin/thinkful_unit_03_deeper_supervised_learning/blob/master/credit_card_fraud_revised.ipynb), disregard this"
    ]
   },
   {
